WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274493
[visionOS] Multi-window audio is coming from wrong location
https://bugs.webkit.org/show_bug.cgi?id=274493
Summary
[visionOS] Multi-window audio is coming from wrong location
Jer Noble
Reported
2024-05-21 16:07:13 PDT
[visionOS] Multi-window audio is coming from wrong location
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-05-21 16:07:21 PDT
<
rdar://problem/128499204
>
Jer Noble
Comment 2
2024-05-21 16:35:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28882
EWS
Comment 3
2024-05-21 21:15:33 PDT
Committed
279103@main
(00222bd02ce4): <
https://commits.webkit.org/279103@main
> Reviewed commits have been landed. Closing PR #28882 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug