[visionOS] Multi-window audio is coming from wrong location https://bugs.webkit.org/show_bug.cgi?id=274493 rdar://128499204

Reviewed by Andy Estes and Sam Weinig.

Initially, a MediaPlayerPrivateAVFoundationObjC will have an AVPlayer but no AVPlayerLayer, so
will get the "default" spatial tracking label. When an AVPlayerLayer is created (or destroyed!)
the tracking label will need to be re-calculated.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayerLayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateSpatialTrackingLabel):

Canonical link: https://commits.webkit.org/279103@main